# gfeed

./: .cbfmt.toml  .gitignore  README.md  cache.json  feed.atom  gfeed.py  index.html  pyproject.toml
.github/workflows/: build.yaml  update-feed.yaml
src/gfeed/: __main__.py  cli.py  fetch.py
